<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_name"
            android:inputType="textPersonName" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_one"
            android:textSize="16sp"
            android:paddingLeft="3dp"
            android:textColor="@color/text_color"
            android:layout_marginTop="16dp"
            android:paddingStart="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            android:textColor="@color/text_color"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">
            <RadioButton
                android:id="@+id/qone_first_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_one_a"
                android:textSize="16sp"/>
            <RadioButton
                android:id="@+id/qone_sec_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_one_b"
                android:textSize="16sp"/>
            <RadioButton
                android:id="@+id/qone_third_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_one_c"
                android:textSize="16sp"/>
        </RadioGroup>

        </LinearLayout>

    </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_two"
                android:textSize="16sp"
                android:paddingLeft="3dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two"
                    android:textColor="@color/text_color"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <RadioButton
                        android:id="@+id/qtwo_first_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_two_a"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:id="@+id/qtwo_sec_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_two_b"
                        android:textSize="16sp"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_three"
                android:textSize="16sp"
                android:paddingLeft="3dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three"
                    android:textColor="@color/text_color"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <RadioButton
                        android:id="@+id/qthree_first_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_two_a"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:id="@+id/qthree_sec_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_two_b"
                        android:textSize="16sp"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_four"
                android:textSize="16sp"
                android:paddingLeft="3dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_four"
                    android:textColor="@color/text_color"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <RadioButton
                        android:id="@+id/qfour_first_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_four_a"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:id="@+id/qfour_sec_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_four_b"
                        android:textSize="16sp"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_five"
                android:textSize="16sp"
                android:paddingLeft="3dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_five"
                    android:textColor="@color/text_color"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <RadioButton
                        android:id="@+id/qfive_first_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_five_a"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:id="@+id/qfive_sec_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_five_b"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:id="@+id/qfive_third_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_five_c"
                        android:textSize="16sp"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_six"
                android:textSize="16sp"
                android:paddingLeft="3dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_six"
                    android:textColor="@color/text_color"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <RadioButton
                        android:id="@+id/qsix_first_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_six_a"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:id="@+id/qsix_sec_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_six_b"
                        android:textSize="16sp"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_seven"
                android:textSize="16sp"
                android:paddingLeft="3dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_seven"
                    android:textColor="@color/text_color"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <CheckBox
                        android:id="@+id/qseven_first_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_seven_a"
                        android:textSize="16sp"/>
                    <CheckBox
                        android:id="@+id/qseven_sec_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_seven_b"
                        android:textSize="16sp"/>
                    <CheckBox
                        android:id="@+id/qseven_third_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_seven_c"
                        android:textSize="16sp"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/view_ans_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ans_btn_style"
            android:text="@string/view_answer"
            android:shadowColor="@color/text_color"
            android:layout_weight="1"
            android:layout_margin="8dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_btn_style"
            android:text="@string/submit_btn"
            android:shadowColor="@color/text_color"
            android:layout_weight="1"
            android:layout_margin="8dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>